--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <button id="clear" class="clear btn">
-        <i class="fas fa-trash">Clear Cards</i>
+        <i class="fas fa-trash">Clear Cards</i> <!--Clears current cards on screen from quiz-->
     </button>
-    <h1>Quiz Night Nelson
-        <button id="show" class="btn btn-small">
-            <i class="fas fa-plus">Add New Quiz</i>
+    <h1>Quiz Night Nelson  <!--main heading of quiz night nelson-->
+        <button id="show" class="btn btn-small">  
+            <i class="fas fa-plus">Add New Quiz</i> <!--button to add new quiz-->
         </button>
     </h1>
     <div id="cards-container" class="cards">
@@ -51,29 +51,29 @@
     </div> -->
     </div>
     <div class="navigation">
-        <button id="prev" class="nav-button">
+        <button id="prev" class="nav-button">  <!--Arrow buttons left-->
             <i class="fa fa-arrow-left"></i>
         </button>
         <p id="current"></p>
-        <button id="next" class="nav-button">
+        <button id="next" class="nav-button"> <!--Arrow buttons right-->
             <i class="fa fa-arrow-right"></i>
         </button>
     </div>
     <div id="add-container" class="add-container">
         <h1>Add New Quiz
-            <button id="hide" class="btn btn-small btn-ghost">
+            <button id="hide" class="btn btn-small btn-ghost"> <!--hidden button-->
                 <i class="fas fa-times"></i>
             </button>
         </h1>
         <div class="form-group">
-            <label for="question">Question</label>
+            <label for="question">Question</label> <!--Question box that pops up for entering question-->
             <textarea id="question" placeholder="Enter Question..."></textarea>
         </div>
         <div class="form-group">
-            <label for="answer">Answer</label>
+            <label for="answer">Answer</label> <!--Answer box for entering answer in-->
             <textarea id="answer" placeholder="Enter Answer..."></textarea>
         </div>
-        <button id="add-question" class="btn">
+        <button id="add-question" class="btn"> <!--button for adding another question and answer-->
             <i class="fas fa-plus"></i> Add Question
         </button>
     </div>
